Update to the content of voting blog.

--- a/_drafts/voting.rmd
+++ b/_drafts/voting.rmd
@@ -232,4 +232,8 @@ CondorcetRank(votes2)
 So whilst Posters A and D have the same number of first preferences, more people
 preference D over all other posters, than they do A.
 
+Above all else, congratulations to Poster A, which was produced by Dr Gemma
+Vincent. Gemma scooped the pool at Research Week, winning another two prizes on
+top of here ECR prize. Congratulations Gemma!
+
 Majority rules!
