Update to post.

--- a/_posts/2014-11-19-voting.md
+++ b/_posts/2014-11-19-voting.md
@@ -17,26 +17,21 @@ done using a full preferential system, also known as instant runoff voting
 (IRV).
 
 That's all well and good, and you can read up more about preferential voting at
-the linked Wikipedia page, but why am I discussing voting? Last week was Barwon
-Health Research Week, of which I was on the organising committee, and also one
-of the poster judges. Research Week is an annual event at Barwon Health, which
-aims to highlight all of the fantastic research done by Barwon Health and Deakin
-researchers and staff.
-
-As part of the poster judging, we also awarded a prize to the best 'Early Career
-Researcher' (ECR) poster. There were nine judges at the session, and each of us
-ranked a shortlist of five posters: preferential voting at its best!
+the linked Wikipedia page, but why am I discussing voting? I was recently
+involved in a judging session where nine judges (myself included) ranked five
+possible candidates, in preferential order.
 
 When it came time to count the votes, there was not a clear winner (actually,
 there was after looking at the data afterwards, but it didn't make a
 difference!), so the question became how to decide on the winner? The chosen
-method: sum the preferences for each poster, with the poster that had the
+method: sum the preferences for each candidate, with the candidate that had the
 *smallest* number of total preferences being the winner.
 
 As a statistician, this irked me. We had data in the form of ranks, but were
-treating them as continuous data. Just because two of the judges placed poster A
-above poster B, doesn't mean the difference between the two posters was judged
-the same, rather that both judges *preferred* poster A to poster B.
+treating them as continuous data. Just because two of the judges placed
+Candidate A above Candidate B, doesn't mean the difference between the two
+candidates was judged the same, rather that both judges *preferred* Candidate A
+to Candidate B.
 
 Summing, or taking the mean of the preferences, is known as the
 [Borda count](http://en.wikipedia.org/wiki/Borda_count), and by the description
@@ -48,25 +43,25 @@ So what other methods could we use? The preferential method as described above?
 Or the [Condorcet method](http://en.wikipedia.org/wiki/Condorcet_method), which
 is a method that chooses the candidate that would win by majority against
 pairings with all the other candidates. The Condorcet method is a *majoritan*
-method. Unfortunately it doesn't work, because you can get cycles. A great
-analogy is on the previously linked Wikipedia page: there may be a situation
-where each candidate wins against another, like in a rock-paper-scissors game.
+method. Unfortunately it doesn't always work, because you can get cycles. A
+great analogy is on the previously linked Wikipedia page: there may be a
+situation where each candidate wins against another, like in a
+rock-paper-scissors game. So you need some way of breaking ties.
 
-So how do the methods compare for the earlier mentioned poster competition at
-Barwon Health? Let's have a look! Firstly, I found some code to calculate both
-the Borda and Condorcet winner
+So how do the methods compare for the session I was judging? Let's have a look!
+Firstly, I found some code to calculate both the Borda and Condorcet winner
 [here](http://www.r-bloggers.com/condorcet-ranking-and-rcpp/). And here's the
 data:
 
 
 ```r
-votes <- structure(list(ProjectNumber = c("A", "B", "C", "D", "E"),
+votes <- structure(list(Candidate = c("A", "B", "C", "D", "E"),
                         A = c(1L, 3L, 2L, 4L, 5L), B = c(3L, 4L, 2L, 1L, 5L),
                         C = c(2L, 4L, 5L, 1L, 3L), D = c(2L, 4L, 1L, 3L, 5L),
                         E = c(3L, 4L, 5L, 2L, 1L), F = c(1L, 3L, 2L, 4L, 5L),
                         G = c(1L, 3L, 5L, 4L, 2L), H = c(3L, 2L, 5L, 4L, 1L),
                         I = c(4L, 1L, 5L, 2L, 3L)),
-                   .Names = c("ProjectNumber", paste("J", 1:9, sep = "")),
+                   .Names = c("Candidate", paste("J", 1:9, sep = "")),
 				   class = "data.frame", row.names = c(NA, -5L))
 ```
 
@@ -82,10 +77,10 @@ Firstly, what's the Borda count winner?
 ## 3     C     3.555556        5
 ```
 
-Poster A is the winner by the Borda count, follwed by Poster D. What if we do
-the full preferential count? There were 9 judges, so after distributing
+Candidate A is the winner by the Borda count, follwed by Candidate D. What if we
+do the full preferential count? There were 9 judges, so after distributing
 preferences, a candidate needs 5 votes to be declared a winner. I did this
-manually, and came up with again, Poster A, followed by Poster D.
+manually, and came up with again, Candidate A, followed by Candidate D.
 
 Finally, how about the Condorcet method? Recall this method counts pairwise
 winners:
@@ -99,19 +94,19 @@ winners:
 ## 5    C    5 Condorcet
 ```
 
-So here again, Poster A is the winner, but now the runner-up is Poster B: that
-is, in all pairwise elections, Poster B came out the winner more often than
-Poster D.
+So here again, Candidate A is the winner, but now the runner-up is Candidate B:
+that is, in all pairwise elections, Candidate B came out the winner more often
+than Candidate D.
 
-As it turned out, looking at the data, Poster A had the most first preferences
-anyway with three votes, so to keep it simple, we should have picked it anyway!
-But what's interesting, is that while Posters D and E each had 2 first
-preferences, they were ranked third and fourth respectively by the Condorcet
-method: most people preferred other posters.
+As it turned out, looking at the data, Candidate A had the most first
+preferences anyway with three votes, so to keep it simple, we should have picked
+them anyway!  But what's interesting, is that while Candidates D and E each had
+2 first preferences, they were ranked third and fourth respectively by the
+Condorcet method: most people preferred other candidates.
 
 What if the preferences had been slightly different? Let's look at swapping two
-preferences for a single judge: Judge 8 will now vote Poster D first, and Poster
-E fourth:
+preferences for a single judge: Judge 8 will now vote Candidate D first, and
+Candidate E fourth:
 
 
 ```r
@@ -120,8 +115,8 @@ votes2$J8[4] <- 1
 votes2$J8[5] <- 4
 ```
 
-The Borda method still places Poster A first, with Posters E and C swapping
-places:
+The Borda method still places Candidate A first, with Candidates E and C
+swapping places:
 
 
 ```
@@ -133,8 +128,8 @@ places:
 ## 5     E     3.666667        5
 ```
 
-Most importantly though, the Concordet method now chooses Poster D as the
-winner, with Poster A coming second!
+Most importantly though, the Concordet method now chooses Candidate D as the
+winner, with Candidate A coming second!
 
 
 ```
@@ -146,11 +141,8 @@ winner, with Poster A coming second!
 ## 5    C    5 Condorcet
 ```
 
-So whilst Posters A and D have the same number of first preferences, more people
-preference D over all other posters, than they do A.
-
-Above all else, congratulations to Poster A, which was produced by Dr Gemma
-Vincent. Gemma scooped the pool at Research Week, winning another two prizes on
-top of here ECR prize. Congratulations Gemma!
+So whilst Candidates A and D have the same number of first preferences, more
+people preference Candidate D over all other candidates, than they do Candidate
+A.
 
 Majority rules!
